@@ -141,6 +141,12 @@ Do not wrap the line if the device name is too long. This can be useful when par
 the output of
 .BR quota (1)
 by a script.
+.TP
+.B --show-mntpoint
+Show also mount point as a filesystem identification.
+.TP
+.B --hide-device
+Do not show device name in a filesystem identification.
 .LP
 Specifying both
 .B \-g
